# JapanHorseRaceAnalytics

./: .devcontainer.json  .env.template  .gitignore  01_model_training.ipynb  01_model_training_place.ipynb  02_model_training_win.ipynb  03_model_training_place_前日直前学習.ipynb  06_model_training_place_前日直前学習_features_4.ipynb  08_RL.ipynb  Justfile  Makefile  README.md  Training.ipynb  Untitled.ipynb  dbt_project.yml  docker-compose.yaml  hive-site.xml  justfile  profiles.yml  pyproject.toml  requirements.txt  spark.policy
JRDBDataParsingTools/: data_schema.py  download.py  file_downloader.py  parse.py  parse_SED.py  parse_schema_doc.py  structured_logger.py
analyses/: example.sql  find_duplicates_bac.sql  find_duplicates_cha.sql  find_duplicates_cyb.sql  find_duplicates_hjc.sql  find_duplicates_kab.sql  find_duplicates_kyi.sql  find_duplicates_oz.sql  find_duplicates_sed.sql  find_duplicates_skb.sql  find_duplicates_srb.sql  find_duplicates_tyb.sql  find_duplicates_ukc.sql  find_horses_multiple_races_single_day.sql  find_payout_diff_sed_vs_before.sql  percent_diff_before_after_odds.sql  rank_race_positions.sql  remove_sed_duplicates.sql  runner_count_difference.sql  scratch.sql  sed_bac_distance_diff.sql  sed_kyi_trainer_diff.sql  sed_kyi_tyb_jockey_diff.sql  test.sql
docker/: spark.Dockerfile
docker-entrypoint-initdb.d/: initdb.sql
images/: erDiagram.mmd  erOdds.mmd
jhra/: jma.py  jrdb.py  settings.py
macros/: exec_sql.sql  extract_hour_from_iso8601_string.sql  parse_two_digit_year.sql
notebooks/: 00_data_prep.ipynb  03_model_training_place_前日直前学習.ipynb  04_model_training_win_前日直前学習.ipynb  07_model_training_place_features_5.ipynb  08_schema_organization.ipynb  20240103_multiple_models.ipynb  20240105_onehot_ordinal.ipynb  20240106_balance_labels.ipynb  20240107_seasonal_models.ipynb  20240108_4_seasonal_models.ipynb  20240108_no_seasons.ipynb  20240109_jma_data.ipynb  20240120_seasonal_models_12_2_as_winter.ipynb  20240121_lgbm_binary_mlflow_01.ipynb  (+7 more)
(+230 files in other folders)
