[project]
name = "japanhorseraceanalytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "dbt-core>=1.10.13",
    "dbt-spark[pyhive]>=1.9.3",
    "graphviz>=0.21",
    "gymnasium>=1.2.1",
    "hyperopt>=0.2.7",
    "imbalanced-learn>=0.14.0",
    "japanize-matplotlib>=1.1.3",
    "jupyterlab>=4.4.9",
    "keras-tuner>=1.4.7",
    "lightgbm>=4.6.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.6",
    "mlflow>=3.4.0",
    "mlxtend>=0.23.4",
    "pandas>=2.3.2",
    "pydantic>=2.11.9",
    "pyspark==3.3.2",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "shap>=0.48.0",
    "sqlalchemy>=2.0.43",
    "stable-baselines3[extra]>=2.7.0",
    "tensorflow>=2.20.0",
    "tensorforce>=0.5.5",
    "trueskill>=0.4.5",
]
